--- a/app/views/lessons/_form.html.erb
+++ b/app/views/lessons/_form.html.erb
@@ -1,6 +1,6 @@
 <%= render "layouts/errors", :object => @lesson %>
 
-<%= form_for @lesson do |f| %>
+<%= form_for [@section, @lesson] do |f| %>
   <%= f.label :order %>
   <%= f.text_field :order %>
   <%= f.label :day %>
