build out complete CRUD functionality for section and chapter

--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -14,3 +14,9 @@
 <% else %>
   <p>There are no sightings yet!</p>
 <% end %>
+
+<p><%= link_to "Edit Section", edit_chapter_section_path(@section) %></p>
+<p><%= link_to "Delete", section_path(@section),
+                         :data => {:confirm => "You sure?",
+                                   :method => "delete"} %></p>
+<p><%= link_to "Return to chapter", chapter_path(@section.chapter) %></p>
